[gd_scene load_steps=7 format=3 uid="uid://dgbxq1yfwyyiu"]

[ext_resource type="Script" path="res://app/games/quizgame/scripts/controllers/gamecontroller.gd" id="1_xgqxx"]
[ext_resource type="Theme" uid="uid://j4mgyprwtdlb" path="res://Themes/quizgameTheme.tres" id="2_7rfnk"]
[ext_resource type="AudioStream" uid="uid://mh0q8kw4ar78" path="res://app/games/quizgame/media_quiz/CorrectAudio.mp3" id="3_jq0tb"]
[ext_resource type="Texture2D" uid="uid://jsxe2sqlqih8" path="res://app/games/foodchain/background.jpg" id="3_lte3r"]
[ext_resource type="AudioStream" uid="uid://l0jykrvqopfm" path="res://app/games/quizgame/media_quiz/WrongAudio.mp3" id="4_o81vo"]

[sub_resource type="LabelSettings" id="LabelSettings_miarc"]
font_size = 40

[node name="QuizGame" type="CanvasLayer"]
script = ExtResource("1_xgqxx")
color_rigth = Color(0, 0.647059, 0, 1)
color_wrong = Color(0.709804, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_7rfnk")

[node name="Background" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 11.0
offset_bottom = 8.0
texture = ExtResource("3_lte3r")
expand_mode = 1

[node name="QuestionInfo" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.092
anchor_top = 0.069
anchor_right = 0.924
anchor_bottom = 0.93
offset_left = -0.240005
offset_top = -0.320007
offset_right = -0.280029
offset_bottom = -49.4001
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="QuestionText" type="Label" parent="Control/QuestionInfo"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Question
"
label_settings = SubResource("LabelSettings_miarc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ImageHolder" type="Panel" parent="Control/QuestionInfo"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="QuestionImage" type="TextureRect" parent="Control/QuestionInfo/ImageHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuestionVideo" type="VideoStreamPlayer" parent="Control/QuestionInfo/ImageHolder"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="QuestionAudio" type="AudioStreamPlayer" parent="Control/QuestionInfo/ImageHolder"]

[node name="HSeparator" type="HSeparator" parent="Control/QuestionInfo"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14

[node name="QuestionHolder" type="VBoxContainer" parent="Control/QuestionInfo"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
theme_override_constants/separation = 12

[node name="ButtonOption1" type="Button" parent="Control/QuestionInfo/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30

[node name="ButtonOption2" type="Button" parent="Control/QuestionInfo/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30

[node name="ButtonOption3" type="Button" parent="Control/QuestionInfo/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30

[node name="ButtonOption4" type="Button" parent="Control/QuestionInfo/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30

[node name="GameOver" type="ColorRect" parent="Control"]
visible = false
layout_mode = 0
offset_right = 718.0
offset_bottom = 1277.0
color = Color(0.129412, 0.403922, 0.427451, 1)

[node name="Title" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_top = 276.0
offset_right = 173.0
offset_bottom = 371.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Aciertos:"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.0
offset_top = 502.0
offset_right = 173.0
offset_bottom = 639.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "0/0"
horizontal_alignment = 1

[node name="Volver" type="Button" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -229.0
offset_top = 843.0
offset_right = 229.0
offset_bottom = 933.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Volver"

[node name="AudioCorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jq0tb")

[node name="AudioIncorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_o81vo")

[connection signal="pressed" from="Control/GameOver/Volver" to="." method="_on_volver_pressed"]
